--- a/ExaFiles/conf.ini
+++ b/ExaFiles/conf.ini
@@ -3,7 +3,7 @@
 
 
 
-neighbor 192.168.44.2 {                 
+neighbor 192.168.44.2 {                 # le routeur voisin
     router-id 192.168.44.3;              #  local router-id
     local-address 192.168.44.3;          #  local update-source
     local-as 2;                          # AS local
